// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeStaleFiles allowChanges - removes -latest file when dest is no longer managed 1`] = `
[
  [
    "<PROJECT_ROOT>/file2.js",
  ],
  [
    "<PROJECT_ROOT>/file2.js-latest.js",
  ],
]
`;

exports[`removeStaleFiles allowChanges - removes -latest file when source and dest hash match 1`] = `
[
  [
    "<PROJECT_ROOT>/file2.js-latest.js",
  ],
]
`;

exports[`removeStaleFiles backup file if removed and destination hash different 1`] = `
[
  [
    "<PROJECT_ROOT>/nested/file1.js",
    "<PROJECT_ROOT>/nested/file1.js-backup-971eb09e.js",
    {
      "overwrite": false,
    },
  ],
]
`;

exports[`removeStaleFiles removes stale files 1`] = `
[
  [
    "<PROJECT_ROOT>/nested/inside.js",
  ],
]
`;
